design/labboek/ontwikkelomgeving updaten op 8-6-18.txt
ONTWIKKELOMGEVING UPDATEN
Aanleiding: de Purescript IDE in Atom triggerde geen fast build meer na file save. Evenmin reageerde hij nog op het globale build command. De output directory leeg maken hielp niet.


NODE
Ik heb eerst de nieuwste lts versie van Node Boron geinstalleerd met:

nvm install --lts=boron

met als resultaat:
	$nvm current
	>v6.14.2


NPM
Vervolgens npm geactualiseerd:

npm install npm@latest -g

met als resultaat:

	$npm --version
	>6.1.0


PULP EN PURESCRIPT
Ik had eerst pulp en purescript gede-installeerd. Vervolgens:

npm install -g purescript pulp

Helaas loopt dit vast:

=================== LOGGING
> install-purescript --purs-ver=0.12.0 .

/Users/joopringelberg/.nvm/versions/node/v6.14.2/lib/node_modules/purescript/node_modules/install-purescript/index.js:146
						...options
						^^^

SyntaxError: Unexpected token ...
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:549:28)
    at Object.Module._extensions..js (module.js:586:10)
    at Module.load (module.js:494:32)
    at tryModuleLoad (module.js:453:12)
    at Function.Module._load (module.js:445:3)
    at Module.require (module.js:504:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/Users/joopringelberg/.nvm/versions/node/v6.14.2/lib/node_modules/purescript/node_modules/install-purescript-cli/index.js:12:27)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! purescript@0.12.0 postinstall: `install-purescript --purs-ver=0.12.0 .`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the purescript@0.12.0 postinstall script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /Users/joopringelberg/.npm/_logs/2018-06-08T08_46_57_971Z-debug.log
=================== END LOGGING

Vervolgens blijkt purs niet te zijn geïnstalleerd:
	$ ls -l /Users/joopringelberg/.nvm/versions/node/v6.14.2/lib/node_modules
	total 0
	drwxr-xr-x  26 joopringelberg  staff  884  8 jun 10:45 npm
	drwxr-xr-x  13 joopringelberg  staff  442  8 jun 10:46 pulp

Herinstalleren:

	npm install -g purescript
	
leidt tot dezelfde fout.



PURESCRIPT BINARY DOWNLOADEN
Ik heb de purescript binary gedownload van: https://github.com/purescript/purescript/releases.

Vervolgens moet ik die in een map plaatsen die in mijn PATH zit. 
Met 
	echo $PATH
zie ik wat mijn path is (onder de zojuist geinstalleerde node versie). Ik kies daaruit:
	/Users/joopringelberg/.nvm/versions/node/v6.14.2/bin
In die directory bleek al een symbolische link te zijn gemaakt naar de node installatie van purs, maar die was dus mislukt. Ik heb die link verwijderd en vervolgens de purs executable daar neergezet.



PULP BUILD
De build met pulp faalt met 18 errors op libraries. Ik zal deze libraries moeten updaten naar hun laatste versies.
Hierbij moet ik erop letten dat mijn eigen aanpassingen van de Parser niet verloren gaan!


{INTERMEZZO: ik heb geprobeerd alle Purescript libs te updaten naar hun laatste versie. Maar dat geeft een incompatibele verzameling libraries. zie voor een verslag: "update alle purescript libs.txt". Ik zal meer probleemgericht moeten werken. }

